<resources>
    <string name="app_name">SCLANA</string>
    <string name="app_name_full">SAILING COURSE LAYOUT AND NAVIGATION APP</string>
    <string name="app_name_full_line1">SAILING COURSE LAYOUT</string>
    <string name="app_name_full_line2">AND NAVIGATION APP</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="angle">Corner Angles</string>
    <string name="degrees">°</string>
    <string name="minutes">\'</string>
    <string name="reach_length">Reach Length</string>
    <string name="calculate">Calculate</string>
    <string name="_1_2_beat_length">1/2 Beat Length</string>
    <string name="_2_3_beat_length">2/3 Beat Length</string>
    <string name="equal">Equal</string>
    <string name="unequal">Unequal</string>
    <string name="second_beat_length">Second Beat Length</string>
    <string name="course_length">Course Length</string>
    <string name="starboard">Starboard</string>
    <string name="portboard">Port</string>
    <string name="nautical_miles">Nautical Miles</string>
    <string name="title_activity_navigation_a_p_i">NavigationAPIActivity</string>
    <string name="reference_point">Keep previous reference point?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="course_orientation">Course Orientation</string>
    <string name="coordinate_format_deg_lat">[+-]DD.DDDDDD</string>
    <string name="coordinate_format_deg_lon">[+-]DDD.DDDDDD</string>
    <string name="coord_format_degmin_deg_lat">[+-]DD</string>
    <string name="coord_format_degmin_deg_lon">[+-]DDD</string>
    <string name="coord_format_degmin_min">MM.MMM</string>
    <string name="wind_dir_helper">0° - 360°</string>
    <string name="length_unit_nm">Nm</string>
    <string name="length_unit_km">km</string>
    <string name="length_format_km">0.00km</string>
    <string name="length_format_nm">0.00Nm</string>

    <string name="hello_world">Hello Square World!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mark_1">MARK 1</string>

    <string name="mark_2">MARK 2</string>
    <string name="mark_3">MARK 3</string>
    <string name="mark_4">MARK 4</string>
    <string name="back">Back</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <!-- Preference Titles -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Messages Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">HOME</string>
    <string name="variables">VARIABLES</string>
    <string name="weather">WEATHER</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="optimist">Optimist</string>
    <string name="windward">Windward</string>
    <string name="triangle">Triangle</string>
    <string name="trapezoid">Trapezoid</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitudeCaps">LATITUDE</string>
    <string name="longitudeCaps">LONGITUDE</string>
    <string name="current_nheading">CURRENT\nHEADING</string>
    <string name="distance_nto_mark">DISTANCE\nTO MARK</string>
    <string name="bearing_nto_mark">BEARING\nTO MARK</string>
    <string name="distance">DISTANCE</string>
    <string name="bearing">BEARING</string>
    <string name="date">DATE:</string>
    <string name="description">DESCRIPTION:</string>
    <string name="temperature_c">TEMPERATURE (°C):</string>
    <string name="wind_speed_m_s">WIND SPEED (m/s):</string>
    <string name="wind_direction_deg">WIND DIRECTION (deg):</string>
    <string name="humidity">HUMIDITY (%):</string>
    <string name="pressure_hpa">PRESSURE (hPa):</string>
    <string name="start">START</string>
    <string name="weather_data">Weather Data</string>
    <string name="help_text">The coordinates you input will be used as the reference point and mark 4 coordinates.</string>
    <string name="confirm_text">By proceeding to this page you will lose the existing course setup.</string>
    <string name="settings">SETTINGS</string>
    <string name="advanced_variables">Advanced Variables</string>
    <string name="locate_me">LOCATE</string>
    <string name="connect">CONNECT</string>
    <string name="continuebtn">CONTINUE</string>
    <string-array name="course_shapes">
        <item>Windward-Leeward</item>
        <item>Triangle</item>
        <item>Trapezoid</item>
        <item>Optimist</item>
    </string-array>
    <string-array name="triangle_angles">
        <item>60°, 60°, 60°</item>
        <item>45°, 90°, 45°</item>
    </string-array>
    <string-array name="trapezoid_angles">
        <item>60°, 120°</item>
        <item>70°, 110°</item>
    </string-array>

</resources>
