<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/btn_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_black_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/btn_variables"
        android:title="@string/variables"
        android:icon="@drawable/baseline_tune_black_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/btn_weather"
        android:title="@string/weather"
        android:icon="@drawable/radar"
        app:showAsAction="never" />
    <item android:id="@+id/btn_settings"
        android:title="SETTINGS"
        android:icon="@drawable/outline_settings_black_24dp"
        app:showAsAction="never" />
</menu>