<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_trapezoid"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="150dp"
   >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/LinearLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/LinearLayout2"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                >
                <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/course_selection_button"
                    android:clickable="false"/>
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_trapezoid"
                    android:tint="@color/colorOnSecondary"
                    android:translationZ="2dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="TRAPEZOID\nExpand to edit trapezoid properties"
                android:textSize="15sp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/LinearLayout3"
        >

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/textView_angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/angle"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioGroup
            android:id="@+id/radioGroup_angle"
            android:layout_width="240dp"
            android:layout_height="37dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/rb_angle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="60°, 120°" />

            <RadioButton
                android:id="@+id/rb_angle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="70°, 110°" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_CourseOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/course_orientation"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <RadioGroup
            android:id="@+id/radioGroup_type"
            android:layout_width="231dp"
            android:layout_height="43dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rb_starboard"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/starboard"
                />

            <RadioButton
                android:id="@+id/rb_portboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portboard" />
        </RadioGroup>
        <TextView
            android:id="@+id/textView_secondBeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/second_beat_length"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioGroup
            android:id="@+id/radioGroup_secondBeat"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/rb_2ndbeat_1"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal" />

            <RadioButton
                android:id="@+id/rb_2ndbeat_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unequal" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_reach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reach_length"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

        <RadioGroup
            android:id="@+id/radioGroup_reach"
            android:layout_width="281dp"
            android:layout_height="41dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/rb_reach_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1_2_beat_length" />

            <RadioButton
                android:id="@+id/rb_reach_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2_3_beat_length" />
        </RadioGroup>

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="30dp"
            android:id="@+id/img_calculate"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/home_start_button"
            android:textSize="16dp"
            android:text="CALCULATE"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorOnSecondary"
            android:drawableLeft="@drawable/ic_path" />
    </LinearLayout>



    </LinearLayout>





</androidx.cardview.widget.CardView>

</LinearLayout>