<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/variablesIcon"
        android:layout_width="90dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_tune_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_CourseVariables"
        android:text="Course Variables"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorDarkBlue"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/radioGroup_type"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButton_starboard"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/starboard"
            android:textColor="@color/colorDarkBlue"
            android:textStyle="bold"
             />

        <RadioButton
            android:id="@+id/radioButton_portboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkBlue"
            android:textStyle="bold"
            android:text="@string/portboard" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_shape"
        android:layout_width="223dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        />
    </LinearLayout>



<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_bearing"
        android:layout_width="138dp"
        android:layout_height="61dp"
        android:textColor="@color/colorDarkBlue"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_bearing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wind_direction" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degrees"
        android:textSize="24sp"

         />
</LinearLayout>


</RelativeLayout>

