<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_weatherBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_edges"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/back"
        android:textColor="@color/colorOnSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherPressure" />

    <TextView
        android:id="@+id/text_weatherPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/pressure_hpa"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherHumidity" />

    <TextView
        android:id="@+id/text_weatherHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/humidity"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherWindDir" />

    <TextView
        android:id="@+id/text_weatherWindDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/wind_direction_deg"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherWindSp" />

    <TextView
        android:id="@+id/text_weatherWindSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/wind_speed_m_s"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherTemp" />

    <TextView
        android:id="@+id/text_weatherTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/temperature_c"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherDesc" />

    <TextView
        android:id="@+id/text_weatherDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/description"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherDate" />

    <TextView
        android:id="@+id/text_weatherDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:text="@string/date"
        android:textColor="@color/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/text_weatherName" />

    <TextView
        android:id="@+id/text_weatherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorOnPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>